fix(CAT.1): Fixed z-index value

--- a/src/components/LayoutParts/Header/Header.module.scss
+++ b/src/components/LayoutParts/Header/Header.module.scss
@@ -13,7 +13,7 @@ $mobile-breakpoint: 639px;
   top: 0;
   width: 100%;
   height: 64px;
-  z-index: 1;
+  z-index: 10;
   border-bottom: 1px solid var(--selected);
   background-color: var(--black);
 }
